--- a/page1.html
+++ b/page1.html
@@ -54,7 +54,7 @@
       if (response.status === 'connected') {
         fetchPages();
       } else {
-        window.location.href = "login.html"; // Redirect to login.html if not logged in
+        window.location.href = "index.html"; // Redirect to login.html if not logged in
       }
     });
   };
