--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     FB.login(function(response) {
       if (response.authResponse) {
         fetchUserProfile();
-        window.location.href = "pages.html"; // Redirect to pages.html after login
+        window.location.href = "page1.html"; // Redirect to pages.html after login
       } else {
         console.log('User cancelled login or did not fully authorize.');
       }
